<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3</name>
  <version>0.0.1</version>
  <description>ORB-SLAM3 library packaged for CMake/colcon.</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
